Create home page

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,7 @@
   --font-mono: var(--font-geist-mono);
   --font-serif: var(--font-young-serif);
   --font-family-outfit: var(--font-outfit);
+  --breakpoint-xs: 426px;
 }
 
 @media (prefers-color-scheme: dark) {
